--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <div id="card">
         <div class="side one">
             <i class="fas fa-heart"></i>
-            
-            <audio autoplay>
+            <audio controls autoplay>
                 <source src="./music/katteyes-x-kidd-voodoo-video-oficial.mp3" type="audio/mpeg">
             </audio>
         </div>
